--- a/template/index.html
+++ b/template/index.html
@@ -554,7 +554,8 @@
 
     <div class="az-footer ht-40">
       <div class="container ht-100p pd-t-0-f">
-        <span>&copy; 2019 Azia Responsive Bootstrap 4 Dashboard Template</span>
+        <span>&copy; 2020 Azia Responsive Bootstrap 4 Dashboard Template</span>
+        <span><a href="https://www.bootstrapdash.com/bootstrap-admin-template/" target="_blank"> Free Bootstrap template </a> from BootstrapDash templates</span>
       </div><!-- container -->
     </div><!-- az-footer -->
 
