--- a/template/table-basic.html
+++ b/template/table-basic.html
@@ -401,7 +401,8 @@
 
           <div class="az-footer mg-t-auto">
             <div class="container">
-              <span>&copy; 2019 Azia Responsive Bootstrap 4 Dashboard Template</span>
+              <span>&copy; 2020 Azia Responsive Bootstrap 4 Dashboard Template</span>
+              <span><a href="https://www.bootstrapdash.com/bootstrap-admin-template/" target="_blank"> Free Bootstrap template </a> from BootstrapDash templates</span>
             </div><!-- container -->
           </div><!-- az-footer -->
         </div><!-- az-content-body -->
