--- a/template/chart-chartjs.html
+++ b/template/chart-chartjs.html
@@ -99,7 +99,7 @@
           <a href="https://www.bootstrapdash.com/demo/azia-free/docs/documentation.html" target="_blank" class="az-header-search-link"><i class="far fa-file-alt"></i></a>
           <a href="" class="az-header-search-link"><i class="fas fa-search"></i></a>
           <div class="az-header-message">
-            <a href="app-chat.html"><i class="typcn typcn-messages"></i></a>
+            <a href="#"><i class="typcn typcn-messages"></i></a>
           </div><!-- az-header-message -->
           <div class="dropdown az-header-notification">
             <a href="" class="new"><i class="typcn typcn-bell"></i></a>
@@ -185,7 +185,6 @@
 
             <label>Charts</label>
             <nav class="nav flex-column">
-              <a href="chart-flot.html" class="nav-link">Flot Charts</a>
               <a href="chart-chartjs.html" class="nav-link active">ChartJS</a>
             </nav>
 
@@ -279,8 +278,8 @@
 
           <div class="az-footer mg-t-auto">
             <div class="container">
-              <span>&copy; 2020 Azia Responsive Bootstrap 4 Dashboard Template</span>
-              <span><a href="https://www.bootstrapdash.com/bootstrap-admin-template/" target="_blank"> Free Bootstrap template </a> from BootstrapDash templates</span>
+              <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © bootstrapdash.com 2020</span>
+              <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center"> Free Bootstrap dashboard templates from <a href="https://www.bootstrapdash.com/bootstrap-admin-template/" target="_blank">Bootstrapdash.com</a></span>
             </div><!-- container -->
           </div><!-- az-footer -->
         </div><!-- az-content-body -->
@@ -296,5 +295,6 @@
 
     <script src="../js/azia.js"></script>
     <script src="../js/chart.chartjs.js"></script>
+    <script src="../js/jquery.cookie.js" type="text/javascript"></script>
   </body>
 </html>
