--- a/template/elem-dropdown.html
+++ b/template/elem-dropdown.html
@@ -100,7 +100,7 @@
           <a href="https://www.bootstrapdash.com/demo/azia-free/docs/documentation.html" target="_blank" class="az-header-search-link"><i class="far fa-file-alt"></i></a>
           <a href="" class="az-header-search-link"><i class="fas fa-search"></i></a>
           <div class="az-header-message">
-            <a href="app-chat.html"><i class="typcn typcn-messages"></i></a>
+            <a href="#"><i class="typcn typcn-messages"></i></a>
           </div><!-- az-header-message -->
           <div class="dropdown az-header-notification">
             <a href="" class="new"><i class="typcn typcn-bell"></i></a>
@@ -172,6 +172,7 @@
       <div class="container">
         <div class="az-content-left az-content-left-components">
           <div class="component-item">
+
             <label>UI Elements</label>
             <nav class="nav flex-column">
               <a href="elem-buttons.html" class="nav-link">Buttons</a>
@@ -179,6 +180,10 @@
               <a href="elem-icons.html" class="nav-link">Icons</a>
             </nav>
 
+            <label>Forms</label>
+            <nav class="nav flex-column">
+              <a href="form-elements.html" class="nav-link">Form Elements</a>
+            </nav>
 
             <label>Charts</label>
             <nav class="nav flex-column">
@@ -189,6 +194,7 @@
             <nav class="nav flex-column">
               <a href="table-basic.html" class="nav-link">Basic Tables</a>
             </nav>
+            
           </div><!-- component-item -->
 
         </div><!-- az-content-left -->
@@ -335,8 +341,8 @@
 
           <div class="az-footer mg-t-auto">
             <div class="container">
-              <span>&copy; 2020 Azia Responsive Bootstrap 4 Dashboard Template</span>
-              <span><a href="https://www.bootstrapdash.com/bootstrap-admin-template/" target="_blank"> Free Bootstrap template </a> from BootstrapDash templates</span>
+              <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © bootstrapdash.com 2020</span>
+              <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center"> Free Bootstrap dashboard templates from <a href="https://www.bootstrapdash.com/bootstrap-admin-template/" target="_blank">Bootstrapdash.com</a></span>
             </div><!-- container -->
           </div><!-- az-footer -->
         </div><!-- az-content-body -->
@@ -347,6 +353,7 @@
     <script src="../lib/jquery/jquery.min.js"></script>
     <script src="../lib/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="../lib/ionicons/ionicons.js"></script>
+    <script src="../js/jquery.cookie.js" type="text/javascript"></script>
 
     <script src="../js/azia.js"></script>
     <script>
