--- a/template/index.html
+++ b/template/index.html
@@ -554,8 +554,8 @@
 
     <div class="az-footer ht-40">
       <div class="container ht-100p pd-t-0-f">
-        <span>&copy; 2020 Azia Responsive Bootstrap 4 Dashboard Template</span>
-        <span><a href="https://www.bootstrapdash.com/bootstrap-admin-template/" target="_blank"> Free Bootstrap template </a> from BootstrapDash templates</span>
+        <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © bootstrapdash.com 2020</span>
+        <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center"> Free Bootstrap dashboard templates from <a href="https://www.bootstrapdash.com/bootstrap-admin-template/" target="_blank">Bootstrapdash.com</a></span>
       </div><!-- container -->
     </div><!-- az-footer -->
 
@@ -571,6 +571,7 @@
     <script src="../js/azia.js"></script>
     <script src="../js/chart.flot.sampledata.js"></script>
     <script src="../js/dashboard.sampledata.js"></script>
+    <script src="../js/jquery.cookie.js" type="text/javascript"></script>
     <script>
       $(function(){
         'use strict'
