--- a/template/page-signup.html
+++ b/template/page-signup.html
@@ -97,6 +97,7 @@
     <script src="../lib/jquery/jquery.min.js"></script>
     <script src="../lib/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="../lib/ionicons/ionicons.js"></script>
+    <script src="../js/jquery.cookie.js" type="text/javascript"></script>
 
     <script src="../js/azia.js"></script>
     <script>
