--- a/template/table-basic.html
+++ b/template/table-basic.html
@@ -100,7 +100,7 @@
           <a href="https://www.bootstrapdash.com/demo/azia-free/docs/documentation.html" target="_blank" class="az-header-search-link"><i class="far fa-file-alt"></i></a>
           <a href="" class="az-header-search-link"><i class="fas fa-search"></i></a>
           <div class="az-header-message">
-            <a href="app-chat.html"><i class="typcn typcn-messages"></i></a>
+            <a href="#"><i class="typcn typcn-messages"></i></a>
           </div><!-- az-header-message -->
           <div class="dropdown az-header-notification">
             <a href="" class="new"><i class="typcn typcn-bell"></i></a>
@@ -178,7 +178,10 @@
               <a href="elem-dropdown.html" class="nav-link">Dropdown</a>
               <a href="elem-icons.html" class="nav-link">Icons</a>
             </nav>
-
+            <label>Forms</label>
+            <nav class="nav flex-column">
+              <a href="form-elements.html" class="nav-link">Form Elements</a>
+            </nav>
             <label>Charts</label>
             <nav class="nav flex-column">
               <a href="chart-chartjs.html" class="nav-link">ChartJS</a>
@@ -401,8 +404,8 @@
 
           <div class="az-footer mg-t-auto">
             <div class="container">
-              <span>&copy; 2020 Azia Responsive Bootstrap 4 Dashboard Template</span>
-              <span><a href="https://www.bootstrapdash.com/bootstrap-admin-template/" target="_blank"> Free Bootstrap template </a> from BootstrapDash templates</span>
+              <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © bootstrapdash.com 2020</span>
+              <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center"> Free Bootstrap dashboard templates from <a href="https://www.bootstrapdash.com/bootstrap-admin-template/" target="_blank">Bootstrapdash.com</a></span>
             </div><!-- container -->
           </div><!-- az-footer -->
         </div><!-- az-content-body -->
@@ -413,6 +416,7 @@
     <script src="../lib/jquery/jquery.min.js"></script>
     <script src="../lib/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="../lib/ionicons/ionicons.js"></script>
+    <script src="../js/jquery.cookie.js" type="text/javascript"></script>
 
     <script src="../js/azia.js"></script>
   </body>
