--- a/template/elem-buttons.html
+++ b/template/elem-buttons.html
@@ -382,7 +382,7 @@
           <div class="az-footer mg-t-auto">
             <div class="container">
               <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © bootstrapdash.com 2020</span>
-              <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center"> Free Bootstrap dashboard templates from <a href="https://www.bootstrapdash.com/bootstrap-admin-template/" target="_blank">Bootstrapdash.com</a></span>
+              <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center"> Free Bootstrap admin templates from <a href="https://www.bootstrapdash.com/bootstrap-admin-template/" target="_blank">Bootstrapdash.com</a></span>
             </div><!-- container -->
           </div><!-- az-footer -->
         </div><!-- az-content-body -->
